fix(security): externalize CORS origins, register rate-limit filter, and fix default registration role
- WebSecurityConfig: read allowed origins from photoarchive.app.allowed-origins
  (env: ALLOWED_ORIGINS) instead of a hardcoded placeholder; supports
  comma-separated multiple origins; register RateLimitFilter before AuthTokenFilter
  so abusive IPs are blocked before any DB or JWT processing
- application.properties: add photoarchive.app.allowed-origins (default: localhost:3000)
  and photoarchive.app.require-admin-approval (default: false)
- AuthService.registerUser: change default role from ROLE_USER to ROLE_GUEST;
  ROLE_USER was never referenced in any authorization rule leaving new accounts
  with no defined access; ROLE_GUEST is the least-privileged named role in the
  security config and has explicit authorization rules; add require-admin-approval
  flag that creates accounts with active=false when enabled